0000-00-00:
    * version 0.8.3
    * Fix features on message detail page (including highlighting and custom
      date formats)
    * Fix bug triggered by certain usernames that stopped GameFOX from working

2011-10-15:
    * version 0.8.2
    * Fix message link icons CSS
    * Make the "remove side column" CSS work on more pages
    * Fix bug preventing GameFOX from working on message lists for some people
    * Re-add option to toggle the quote link
    * Re-add Ricapar's Classic CSS

2011-10-14:
    * version 0.8.1
    * Fix quoting with two-column message lists
    * Fix QuickPost appearing above page links

2011-10-14:
    * version 0.8
    * Fix adding/removing users from highlighting groups with two-column
      message lists
    * Support for Firefox 10 and SeaMonkey 2.4
    * Compatibility with latest version of GameFAQs
    * Add and remove several themes to match updates to GameFAQs' own theme
      list
    * New CSS: Remove side column

2011-02-06:
    * version 0.7.12
    * Fix quoting, filtering and QuickWhois with left message data
    * Fix "edit" link with message link icons stylesheet
    * Update 8for11 CSS
    * Fix QuickPost reset button
    * More robust QuickPost which may fix the bugs affecting some people
    * Fix QuickPost appearing on message detail pages for mods
    * Fix highlighting of VIPs/mods/admins
    * Add option to hide the signature textbox

2011-02-05:
    * version 0.7.11
    * Fix post filtering with "ad in header" setting
    * Update 8for11 CSS
    * Fix adding users to highlighting groups from the topic list when group
      names are shown
    * New ProgFAQs CSS
    * New Ninestalgia CSS
    * Support for the recent GameFAQs updates
    * Show QuickPost for mods in closed topics
    * Update GFPastel 2010 CSS
    * Fix "close" link being shown instead of "delete" for topics with no
      replies
    * Add "edit" link to messages

2010-10-06:
    * version 0.7.10
    * Allow the options window to be resized again