@@ -134,6 +134,8 @@ pref("gamefox.keys.throttle.start", 0);
 pref("gamefox.keys.throttle.count", 0);
 pref("gamefox.keys.throttle.disabledUntil", 0);
 
+pref("gamefox.loginKey", "");
+
 pref("gamefox.logging.verbosity", 1);
 
 pref("gamefox.nightlyChangeLog", true);
