@@ -3,6 +3,7 @@
     * Fix features on message detail page (including highlighting and custom
       date formats)
     * Fix bug triggered by certain usernames that stopped GameFOX from working
+    * Fix adding or updating accounts with the account manager
 
 2011-10-15:
     * version 0.8.2
